k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
  labels:
    app: opa
spec:
  type: ClusterIP
  selector:
    app: opa
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
