k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: opa
  labels:
    app: opa
spec:
  host: opa.autodotes.com
  to:
    kind: Service
    name: opa
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
